2012-03-14  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.14.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.14.

	* foomaticrip.c: If the input data is PDF but the driver requires
	  PostScript, use the pdftops CUPS filter when CUPS is the spooler.
	  This way we always use the same method to convert PDF to PostScript
	  in the whole system, including any workarounds applied in the CUPS
	  filter.

2012-03-02  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.13.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.13.

2012-03-02  Lars Uebernickel <lars@uebernic.de>

	* spooler.c: When using CUPS support option strings (5th command
	  line argument to a CUPS filter) of more than 512 bytes. For PPD
	  files with very many options this string can get very long (Thanks
	  to Yoshito Nishihara, yoshito dot nishihara at nts dot ricoh dot co
	  dot jp for reporting this).

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.12.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.12.

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.11.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.11.

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: If incoming PDF needs to be converted to PostScript
	  due to the filter command line not being a standard Ghostscript
	  command line, no separate PDF command line being supplied, or
	  options in the PPD being implemented by PostScript code, use
	  preferrably Ghostscript (with the "ps2write" device) for this
	  conversion as Ghostscript is better optimized for printing and
	  has a more sophisticated color management compared to Poppler.

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.10.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.10.
